# geniustwo

./: Readme.md  pyproject.toml
data/processed/: Library.csv  audio_features.csv
data/raw/: Library.xml
genuistwo/: collect_from_spotify.py  convert_xml_to_csv.py  extract_audio_features.py  utils.py
