[tool.poetry]
name = "itunes-exploration"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "itunes_exploration"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.1.0"
spotify = "^0.10.2"
spotipy = "^2.23.0"
tqdm = "^4.66.1"
matplotlib = "^3.8.3"
librosa = "^0.10.1"
dask = {extras = ["distributed"], version = "^2024.4.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
